# git-metrics

./: README.md  poetry.toml  pyproject.toml
git_metrics/: __init__.py  activity.py  cli.py  git-similarity.sh  similarity.py  utils.py
tests/: test_git_metrics.py
